<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MPaginas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="autor">Autor</string>
    <string name="paginas">Paginas</string>
    <string name="agregar">Agregar</string>
    <string name="titulo">Titulo</string>
    <string name="guardar">guardar</string>
    <string name="libros_leidos">libros leidos</string>
    <string name="libro_por_leer">libro por leer</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="leyendo">Leyendo</string>
    <string name="leidos">Leidos</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>
</resources>